Crash on drawing a custom socket that doesn't define draw_color_simple #112622

Closed
opened 2023-09-20 14:08:33 +02:00 by Omar Emara · 5 comments
Member

Blender Version
Broken: main, 4.0
Worked: 3.6

Short description of error

When an addon defines a custom socket that doesn't implement the draw_color_simple class method, Blender will crash when drawing that socket with the following backtrace:

    frame #1: 0x0000000007c4eee5blender`blender::ed::space_node::node_socket_color_get(type=0x00007fffc419cb08, r_color=0x00007fffffffd870) at node_draw.cc:1080:3
    frame #2: 0x0000000007c63ebc blender`blender::ed::space_node::node_socket_draw_nested(ntree=0x00007fffb3017208, block=0x00007fffb3b5a718, sock=0x00007fffbe899608, pos_id=0, col_id=1, shape_id=2, size_id=3, outline_col_id=4, size=11.858737, selected=false) at node_draw.cc:1520:3
    frame #3: 0x0000000007c637a6 blender`blender::ed::space_node::node_draw_sockets(v2d=0x00007ffff0553218, ntree=0x00007fffb3017208, node=0x00007fffbe7e6888, block=0x00007fffb3b5a718, draw_outputs=true, select_all=false) at node_draw.cc:1769:5

Exact steps for others to reproduce the error

  • Start from the Custom Nodes python template.
  • Change the draw_color_simple class method into a normal draw_color method.
    # Socket color
    def draw_color(self, context, node):
        return (1.0, 0.4, 0.216, 0.5)
  • Run the script and add a custom node.
  • You get a crash.
**Blender Version** Broken: main, 4.0 Worked: 3.6 **Short description of error** When an addon defines a custom socket that doesn't implement the `draw_color_simple` class method, Blender will crash when drawing that socket with the following backtrace: ``` frame #1: 0x0000000007c4eee5blender`blender::ed::space_node::node_socket_color_get(type=0x00007fffc419cb08, r_color=0x00007fffffffd870) at node_draw.cc:1080:3 frame #2: 0x0000000007c63ebc blender`blender::ed::space_node::node_socket_draw_nested(ntree=0x00007fffb3017208, block=0x00007fffb3b5a718, sock=0x00007fffbe899608, pos_id=0, col_id=1, shape_id=2, size_id=3, outline_col_id=4, size=11.858737, selected=false) at node_draw.cc:1520:3 frame #3: 0x0000000007c637a6 blender`blender::ed::space_node::node_draw_sockets(v2d=0x00007ffff0553218, ntree=0x00007fffb3017208, node=0x00007fffbe7e6888, block=0x00007fffb3b5a718, draw_outputs=true, select_all=false) at node_draw.cc:1769:5 ``` **Exact steps for others to reproduce the error** - Start from the Custom Nodes python template. - Change the `draw_color_simple` class method into a normal `draw_color` method. ``` # Socket color def draw_color(self, context, node): return (1.0, 0.4, 0.216, 0.5) ``` - Run the script and add a custom node. - You get a crash.
Omar Emara added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-09-20 14:08:34 +02:00
Iliya Katushenock added the
Interest
Nodes & Physics
label 2023-09-20 14:09:01 +02:00
Member

I'll try making a patch.

I'll try making a patch.
Member

For some reason my template doesn't have draw_color_simple callback, but I made a patch nonetheless... Not sure if this fixed this all the way since I'm not sure how the python class methods translated to C callbacks, but maybe you could give it a test.

For some reason my template doesn't have `draw_color_simple` callback, but I made a patch nonetheless... Not sure if this fixed this all the way since I'm not sure how the python class methods translated to C callbacks, but maybe you could give it a test.
Author
Member

@ChengduLittleA While this patch works around the issue, I don't think it is the correct solution. Maybe @LukasTonne can take a look first.

@ChengduLittleA While this patch works around the issue, I don't think it is the correct solution. Maybe @LukasTonne can take a look first.

Confirming

Confirming
Member

@OmarEmaraDev I guess what we need to do is to have a undefined socket color specified in std_node_socket_colors (where it happened to have one color being unused) and use a index to get that color like what happens in std_node_socket_color_simple_fn?

@OmarEmaraDev I guess what we need to do is to have a undefined socket color specified in `std_node_socket_colors` (where it happened to have one color being unused) and use a index to get that color like what happens in `std_node_socket_color_simple_fn`?
Lukas Tönne self-assigned this 2023-09-21 11:10:40 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-09-21 11:26:08 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#112622
No description provided.