Fix #112622: Give default color for sockets without `draw_color_simple`

Some custom nodes classes can be registered without a
`draw_color_simple` method, leading to crashes when drawing the socket.